--- a/css/style.css
+++ b/css/style.css
@@ -71,12 +71,11 @@ svg {
 /* --------------------------
   RSVP Button Styles
 --------------------------- */
-.action-button
-{
-	position: relative;
-	padding: 10px 40px;
-  margin: 0px 10px 10px 0px;
-  float: left;
+.action-button {
+  max-width: 80px;
+  display: block;
+  margin: 50px auto 0;
+	padding: 20px 80px 20px 115px;
 	border-radius: 10px;
 	font-family: 'lato', sans-serif;
 	font-size: 25px;
@@ -84,17 +83,16 @@ svg {
 	text-decoration: none;
   transition: all 0.1s;
 	-webkit-transition: all 0.1s;
+  -webkit-animation-delay: 2s;
 }
 
-.datPurp
-{
+.datPurp {
 	background-color: #9b59b6;
 	border-bottom: 5px solid #2c3e50;
 	text-shadow: 0px -2px #2c3e50;
 }
 
-.action-button:active
-{
+.action-button:active {
 	transform: translate(0px,5px);
   -webkit-transform: translate(0px,5px);
 	border-bottom: 1px solid;
