--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,15 @@
 .section-seven{
   background-color: #e67e22;
 }
+
+.image {
+    width:100vw;
+    height: 100vh;
+    background-image: url('../img/rengagement183.jpg');
+    background-size: cover;
+    background-repeat: repeat-y;
+}
+
 /* --------------------------
   SVG Styles
 --------------------------- */
@@ -75,10 +84,11 @@ svg {
   max-width: 80px;
   display: block;
   margin: 50px auto 0;
-	padding: 20px 80px 20px 115px;
+	padding: 20px 80px 19px 80px;
 	border-radius: 10px;
-	font-family: 'lato', sans-serif;
-	font-size: 25px;
+	font-family: 'Raleway', sans-serif;
+	font-size: 35px;
+  font-weight: 700;
 	color: #FFF;
 	text-decoration: none;
   transition: all 0.1s;
@@ -96,4 +106,17 @@ svg {
 	transform: translate(0px,5px);
   -webkit-transform: translate(0px,5px);
 	border-bottom: 1px solid;
+}
+
+/*icon*/
+.fa-angle-double-down{
+  font-size:50px;
+  margin: 0 auto;
+  display: block;
+  width: 24px;
+  position: relative;
+  top: 30px;
+  -webkit-animation-delay: 3s;
+  -webkit-animation-iteration-count: 4;
+  color: #27b899;
 }
