--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ body{
   background-color: #9b59b6;
 }
 .section-three{
-  background-color: #f1c40f;
+  background-color: #83d0d4;
+  /*f1c40f yellow*/
 }
 .section-four{
   background-color: #e74c3c;
@@ -43,9 +44,7 @@ body{
 .section-two.image {
     background-image: url('../img/weddingInfoSection2.jpg');
 }
-a {
-  text-decoration: none;
-}
+
 
 html {
   scroll-behavior: smooth;
@@ -66,14 +65,24 @@ p{
   border-radius: 5px;
 }
 /* --------------------------
-  SVG Styles
+  Text Styles
 --------------------------- */
+.noPanelTitle{
+  margin-left: 10%;
+  margin-top: 5%;
+}
+a{
+  text-decoration: none;
+}
+
 body{
   background-color: #9b59b6;
   font-family: 'Raleway', sans-serif;
 }
 
-
+hr{
+  border: 1px solid #34495e;
+}
 /* --------------------------
   Keyframes
 --------------------------- */
@@ -285,7 +294,7 @@ svg {
 /*End Flex*/
 
 /*wedding info - section 2*/
-.row.space{
+.section-two .row.space{
   margin-top: 5%;
 }
 
@@ -293,6 +302,82 @@ svg {
   text-align: right;
 }
 
-.weddingText hr{
-  border: 1px solid #34495e;
+/*Accomodations - section 3*/
+.section-three hr{
+  position: relative;
+  top: -20px;
+}
+
+p.hotelText {
+  margin:0;
+}
+.panel.add{
+  margin-top: -35px;
+}
+.section-three .bounce{
+  position:relative;
+  top:-23px;
+}
+
+
+nav a {
+	position: relative;
+	display: inline-block;
+	margin: 15px 25px 0 0;
+	outline: none;
+	color: #fff;
+	text-decoration: none;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	font-weight: 400;
+	text-shadow: 0 0 1px rgba(255,255,255,0.3);
+}
+
+
+/* --------------------------
+  Link Styles
+--------------------------- */
+
+
+/* Effect 8: border slight translate */
+.cl-effect-8 a {
+  padding:17px 20px 10px 20px
+}
+
+.cl-effect-8 a::before,
+.cl-effect-8 a::after  {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: 3px solid #83d0d4;
+	content: '';
+	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+	-moz-transition: -moz-transform 0.3s, opacity 0.3s;
+	transition: transform 0.3s, opacity 0.3s;
+}
+
+.cl-effect-8 a::after  {
+	border-color: #fff;
+	opacity: 0;
+	-webkit-transform: translateY(-7px) translateX(6px);
+	-moz-transform: translateY(-7px) translateX(6px);
+	transform: translateY(-7px) translateX(6px);
+}
+
+.cl-effect-8 a:hover::before,
+.cl-effect-8 a:focus::before {
+	opacity: 0;
+	-webkit-transform: translateY(5px) translateX(-5px);
+	-moz-transform: translateY(5px) translateX(-5px);
+	transform: translateY(5px) translateX(-5px);
+}
+
+.cl-effect-8 a:hover::after,
+.cl-effect-8 a:focus::after  {
+	opacity: 1;
+	-webkit-transform: translateY(0px) translateX(0px);
+	-moz-transform: translateY(0px) translateX(0px);
+	transform: translateY(0px) translateX(0px);
 }
