--- a/css/style.css
+++ b/css/style.css
@@ -562,3 +562,7 @@ nav a {
    top:480px;  /* your iframe height */
    margin-top:-480px;  /* your iframe height */
 }
+
+.rgstry{
+  padding-bottom:20px
+}
